docs/2.0.2/_sources/api/deeptrack.features.Feature.rst.txt
Feature
=======

.. currentmodule:: deeptrack.features

.. autoclass:: Feature
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~Feature.bool_dtype
      ~Feature.complex_dtype
      ~Feature.device
      ~Feature.float_dtype
      ~Feature.int_dtype

   .. rubric:: Methods Summary

   .. autosummary::

      ~Feature.__call__
      ~Feature.add_feature
      ~Feature.batch
      ~Feature.bind_arguments
      ~Feature.dtype
      ~Feature.get
      ~Feature.get_backend
      ~Feature.new
      ~Feature.numpy
      ~Feature.plot
      ~Feature.resolve
      ~Feature.seed
      ~Feature.to
      ~Feature.to_sequential
      ~Feature.torch
      ~Feature.update

   .. rubric:: Attributes Documentation

   .. autoattribute:: bool_dtype
   .. autoattribute:: complex_dtype
   .. autoattribute:: device
   .. autoattribute:: float_dtype
   .. autoattribute:: int_dtype

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: add_feature
   .. automethod:: batch
   .. automethod:: bind_arguments
   .. automethod:: dtype
   .. automethod:: get
   .. automethod:: get_backend
   .. automethod:: new
   .. automethod:: numpy
   .. automethod:: plot
   .. automethod:: resolve
   .. automethod:: seed
   .. automethod:: to
   .. automethod:: to_sequential
   .. automethod:: torch
   .. automethod:: update
